--- a/Codificado_Gestion_de_Datos/Gestion/templates/gestion/edit.html
+++ b/Codificado_Gestion_de_Datos/Gestion/templates/gestion/edit.html
@@ -1,13 +1,16 @@
-{% extends 'page/layout.html' %}
+{% extends 'gestion/layout.html' %}
+{% load static %}
+{% block headLinks %}
+    <link rel="stylesheet" href="{% static 'gestion/css/home.css' %}">
+{% endblock %}
 {% block body %}
     <div class="container text-center">
-        <h1></h1>
         <form method="post">
             <div class="form-group">
                 {% csrf_token %}
                 {{ form }}
             </div>
-            <button type="Agregar" class="btn btn-primary">Agregar</button>
+            <button type="Editar" class="btn btn-secondary">Editar</button>
         </form>
     </div>
 {% endblock %}
