--- a/Codificado_Gestion_de_Datos/Gestion/templates/gestion/home.html
+++ b/Codificado_Gestion_de_Datos/Gestion/templates/gestion/home.html
@@ -1,5 +1,16 @@
-{% extends 'page/layout.html' %}
+{% extends 'gestion/layout.html' %}
+{% load static %}
+{% block headLinks %}
+    <link rel="stylesheet" href="{% static 'gestion/css/home.css' %}">
+{% endblock %}
 {% block body %}
+<div class="jumbotron jumbotron-fluid bg-white">
+    <div class="container text-center">
+      <h1 class="display-4">Gestion de datos</h1>
+      <p class="lead">Aplicacion con conexion a base de datos</p>
+    </div>
+</div>
+<body>
 <div class="container"> 
     <table class="table table-striped table-dark">
         <thead>
